--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,68 @@
-.app-container {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding: 1rem;
-}
-
 table {
   border-collapse: collapse;
-  width: 100%;
+  width: 1000px;
+  margin-top: 40px;
+  margin-left: 180px;
+  border-radius: 5px;
+  border: none;
 }
 
-th,
-td {
-  border: 1px solid #ffffff;
-  text-align: left;
-  padding: 8px;
-  font-size: 18px;
+tr {
+  padding: 10px 10px 10px 81px;
+  width: 1000px;
+  height: 50px;
+  background: rgba(196, 196, 196, 0.24);
+  box-shadow: 0px 5px 5px rgba(87, 87, 87, 0.25);
+}
+
+table td,
+table th {
+  border: 1px solid whitesmoke;
+  background: #ffffff;
+  padding: 23px;
   white-space: nowrap;
 }
 
-input[type="checkbox"]{
-  width: 30px; /*Desired width*/
-  height: 30px; /*Desired height*/
+.InputContainer {
+  margin-top: 40px;
+  margin-left: 180px;
 }
 
-th {
-  background-color: rgb(117, 201, 250);
+input {
+  width: 150px;
+  height: 30px;
+  border-radius: 4px;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.3);
+  transition: 0.3s all;
 }
 
-/* td {
-  background-color: rgb(205, 235, 253);
-} */
+input:hover {
+  background-color: rgba(255, 255, 255, 0.45);
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+}
 
-form {
+button {
+  width: 120px;
+  height: 35px;
+  background-color: cadetblue;
+  color: white;
+  border-radius: 5px;
+  border: none;
+}
+
+.editBtn {
   display: flex;
-  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
 
-form td:last-child {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-form * {
-  font-size: 28px;
+.Btn {
+  width: 120px;
+  height: 45px;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  border: none;
 }
